# 02-express-api/src/routes/site.routes.ts
@@ -1,9 +1,26 @@
+/*
+        IWA-Express - Insecure Express JS REST API
+
+        Copyright 2023 Open Text or one of its affiliates.
+
+        This program is free software: you can redistribute it and/or modify
+        it under the terms of the GNU General Public License as published by
+        the Free Software Foundation, either version 3 of the License, or
+        (at your option) any later version.
+
+        This program is distributed in the hope that it will be useful,
+        but WITHOUT ANY WARRANTY; without even the implied warranty of
+        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+        GNU General Public License for more details.
+
+        You should have received a copy of the GNU General Public License
+        along with this program.  If not, see <http://www.gnu.org/licenses/>.
+*/
+
 import {Request, Response, Router} from 'express';
 
 import {SiteController} from "../controllers/site.controller";
 import {AuthorizationHandler} from "../middleware/authorization.handler";
-import * as child_process from "child_process";
-import fs from "fs";
 
 const site_controller: SiteController = new SiteController();
 
@@ -32,7 +49,7 @@ siteRoutes.get('/api/site/status', [AuthorizationHandler.permitAll], (req: Reque
 });
 
 
-siteRoutes.get('/api/site/email-already-exists/:email',[AuthorizationHandler.permitAll], (req: Request, res: Response) => {
+siteRoutes.get('/api/site/email-already-exists/:email', [AuthorizationHandler.permitAll], (req: Request, res: Response) => {
     /*
        #swagger.tags = ['Site']
        #swagger.summary = "Check if email is taken"
@@ -149,7 +166,7 @@ siteRoutes.post('/api/site/sign-in', [AuthorizationHandler.permitAll], (req: Req
              }
         #swagger.responses[200] = {
             description: "Success",
-            schema: { $ref: '#/components/schemas/success' }
+            schema: { $ref: '#/components/schemas/jwtJson' }
         }
         #swagger.responses[400] = {
             description: "Bad Request",
@@ -166,7 +183,7 @@ siteRoutes.post('/api/site/sign-in', [AuthorizationHandler.permitAll], (req: Req
     */
 
     site_controller.login_user(req, res);
-    res.cookie("user", req.url);
+    res.cookie("user", req.url, {httpOnly: true, expires: new Date(Date.now() + 900000)});
 
 });
 
@@ -204,6 +221,7 @@ siteRoutes.post('/api/site/sign-out', [AuthorizationHandler.permitAll], (req: Re
 });
 
 siteRoutes.post('/api/site/refresh-token', [AuthorizationHandler.permitAll], (req: Request, res: Response) => {
+
     /*
        #swagger.tags = ['Site']
        #swagger.summary = "Refresh token"
@@ -240,7 +258,31 @@ siteRoutes.post('/api/site/refresh-token', [AuthorizationHandler.permitAll], (re
 });
 
 siteRoutes.post('/api/site/backup-newsletter-db', [AuthorizationHandler.permitAdmin], (req: Request, res: Response) => {
-   site_controller.backup_newsletter_db(req, res);
+
+    /*
+      #swagger.tags = ['Site']
+      #swagger.summary = "Backup the newsletter database"
+      #swagger.description = "Compress and backup the newsletter database to the specified file"
+          #swagger.parameters['file_path'] = {
+              in: 'query',
+              description: 'The file to backup the database to. Cannot be empty.',
+              type: 'string'
+          }
+          #swagger.responses[200] = {
+              description: "Success",
+              schema: { $ref: '#/components/schemas/success' }
+          }
+          #swagger.responses[400] = {
+              description: "Bad Request",
+              schema: { $ref: '#/components/schemas/failure' }
+          }
+          #swagger.responses[500] = {
+              description: "Internal Server Error",
+              schema: { $ref: '#/components/schemas/failure' }
+          }
+   */
+
+    site_controller.backup_newsletter_db(req, res);
 });
 
 /*siteRoutes.post('/api/site/upload-image', function(request, response) {
